--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>yunbian - Administrator Control panel</title>
+<title>万虎网络 - Administrator Control panel</title>
 <script>var urlpath = '{$url}'</script> 
 <script type="text/javascript" src="{$syskin}/js/jquery.js"></script>
 <script type="text/javascript" src="{$syskin}/js/dialog.js"></script>
@@ -92,11 +92,11 @@
 					</div>
 					{/if}
 					<li>
-						<a href="{spUrl c=admin a=adUnit}" {$curr_adUnit}><span class="f_ad">广告管理</span></a>
+						<a href="{spUrl c=admin a=adUnit}" {$curr_adUnit}><span class="f_ad">图片友链管理</span></a>
 					</li>
 					<div {$curr_addisplay}>
-						<a href="{spUrl c=admin a=adUnit}" {$curr_aadUnit}>广告位管理</a>
-						<a href="{spUrl c=admin a=adContent}" {$curr_aadlist}>广告管理</a>
+						<a href="{spUrl c=admin a=adUnit}" {$curr_aadUnit}>图片位管理</a>
+						<a href="{spUrl c=admin a=adContent}" {$curr_aadlist}>图片管理</a>
 					</div>
 					{if isAdminRole()}
 					<li>
