--- a/tplv2/admin/ad_list.html
+++ b/tplv2/admin/ad_list.html
@@ -3,7 +3,7 @@
 <div id="content">
 
     <div class="main">
-        <a class="btn_common_a" href="{spUrl c=admin a=adContent edit=add}">创建广告</a>
+        <a class="btn_common_a" href="{spUrl c=admin a=adContent edit=add}">创建</a>
         <input class="btn_common"  type="button" value="刷新" id="ad_refresh" />
         <div class="clear"></div>
     </div>
@@ -12,11 +12,11 @@
     <form id="form1" name="form1" method="post" action="">   
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="table_model">
                         <tr class="table_title">
-                            <th class="m_title">广告标题</th>
-                            <th>广告类型</th>
-                            <th>广告位</th>
+                            <th class="m_title">标题</th>
+                            <th>类型</th>
+                            <th></th>
                             <th>日期</th>
-                            <th>广告状态</th>
+                            <th>状态</th>
                             <th>编辑</th>
                         </tr>
                         {foreach from=$adList_list item=d}
