--- a/tplv2/admin/ad_unit.html
+++ b/tplv2/admin/ad_unit.html
@@ -3,7 +3,7 @@
 <div id="content">
 
     <div class="main">
-        <input class="btn_common"   type="button" value="创建广告位" id="ad_add_show" />
+        <input class="btn_common"   type="button" value="创建" id="ad_add_show" />
         <input class="btn_common"  type="button" value="刷新" id="ad_refresh" />
         <div class="clear"></div>
     </div>
@@ -14,15 +14,15 @@
         <div class="con_system">
                <table width="100%" cellpadding="0" cellspacing="0" border="0" class="table_padding">
                   <tr>
-                      <td width="80" class="t_title">广告位标题</td>
+                      <td width="80" class="t_title">标题</td>
                       <td class="c_input"><input class="textipt" type="text"  name="title" /></td>
                   </tr>
                   <tr>
-                        <td class="t_title">广告描述</td>
+                        <td class="t_title">描述</td>
                         <td class="c_input"><input type="text" name="adesc" /></td>
                     </tr>
                     <tr>
-                        <td class="t_title">广告位截图</td>
+                        <td class="t_title">截图</td>
                         <td class="c_input">
                             tpl/admin/style/ad_unit/<input type="text"  name="img" />请上传至目录并只输入文件名称
                         </td>
@@ -54,12 +54,12 @@
     <form id="form1" name="form1" method="post" action="">   
         <table width="100%" border="0" cellspacing="0" cellpadding="0" class="table_model">
                         <tr class="table_title">
-                            <th width="60" class="m_title">广告位ID</th>
-                            <th>广告位名称</th>
+                            <th width="60" class="m_title">ID</th>
+                            <th>名称</th>
                             <th>描述</th>
                             <th>排序</th>
                             <th>系统</th>
-                            <th>广告位状态</th>
+                            <th>状态</th>
                             <th>操作</th>
                         </tr>
                         {foreach from=$adUnit_list item=d}
@@ -74,7 +74,7 @@
                                 {if $d.is_show==1}<a class="f_open" href="{spUrl c=admin a=adUnit flag=close en_show=0 id=$d.id}" title="开启中,点击关闭">开启中,点击关闭</a>{else}<a class="f_close" href="{spUrl c=admin a=adUnit flag=close en_show=1 id=$d.id}" title="关闭中,点击开启">关闭中,点击开启</a>{/if}
                             </td>
                             <td class="fun_con">
-                                <a class="f_look" href="{spUrl c=admin a=adUnit show=$d.id}" title="查看广告位">查看广告位</a>
+                                <a class="f_look" href="{spUrl c=admin a=adUnit show=$d.id}" title="查看广告位">查看</a>
                                 {if $d.system!=1}<a class="f_edit" href="{spUrl c=admin a=adUnit edit=$d.id}" title="编辑">编辑</a><a class="f_delete" href="{spUrl c=admin a=adUnit del=$d.id}" onclick="return(confirm('确定删除?'))" title="删除">删除</a>{else}{/if}
                             </td>
                         </tr>
