--- a/tplv2/admin/ad_unit_edit.html
+++ b/tplv2/admin/ad_unit_edit.html
@@ -3,23 +3,23 @@
 <div id="content">
 
     <div class="t_con">
-	    <h3>广告位信息</h3>
+	    <h3>信息</h3>
 		
 		<table width="100%" cellpadding="0" cellspacing="0" border="0" class="table_padding">
 			       <tr>
-				       <td width="90" class="t_title">广告位ID</td>
+				       <td width="90" class="t_title">ID</td>
 					   <td class="c_font">{$rs.id}</td>
 				   </tr>
 				   <tr>
-				       <td class="t_title">广告位标题</td>
+				       <td class="t_title">位标题</td>
 					   <td class="c_font">{$rs.title}</td>
 				   </tr>
 				   <tr>
-				       <td class="t_title">广告描述</td>
+				       <td class="t_title">描述</td>
 					   <td class="c_font">{$rs.adesc}</td>
 				   </tr>    
 				   <tr>
-				       <td class="t_title">广告位置截图</td>
+				       <td class="t_title">位置截图</td>
 					   <td class="co_img"><img src="{$syskin}/admin/style/ad_unit/{$rs.img}" alt="#" /></td>
 				   </tr>    
 				   <tr>
@@ -38,8 +38,8 @@
 						       <tr>
 								   <td colspan="3" class="table_tip">
 								       <p>请把如下代码的：UNITID 替换成: {$rs.id}</p>
-									   <p>请把如下代码的：#DOM_ID 替换成你要展示广告的div</p>
-									   <p>请把如下代码的：TIMELIMIT 替换成你需要刷新广告位的时间（3000为30秒）</p>
+									   <p>请把如下代码的：#DOM_ID 替换成你要展示的div</p>
+									   <p>请把如下代码的：TIMELIMIT 替换成你需要刷新位的时间（3000为30秒）</p>
 								   </td>
 							   </tr>
 							   <pre>
@@ -122,19 +122,19 @@
 <div id="content">
 <form action="" method="post"  name="form1" id="form1">
     <div class="t_con">
-	    <h3>编辑广告位</h3>
+	    <h3>编辑位</h3>
 		
 		<table width="100%" cellpadding="0" cellspacing="0" border="0" class="table_padding">
 			       <tr>
-				       <td width="90" class="t_title">广告位标题</td>
+				       <td width="90" class="t_title">位标题</td>
 					   <td class="c_input"><input type="text" value="{$rs.title}" name="title" /></td>
 				   </tr>
 				   <tr>
-				       <td class="t_title">广告描述:</td>
+				       <td class="t_title">描述:</td>
                        <td class="c_input"><input type="text" value="{$rs.adesc}" name="adesc" /></td>
 				   </tr>
 				   <tr>
-				       <td class="t_title">广告位置截图:</td>
+				       <td class="t_title">位置截图:</td>
                        <td class="co_img c_input">
 					       <img src="{$rs.img}" alt="#" /><br />
 						   <input type="text" name="img" value="{$rs.img}" />
