--- a/templet/phone_fen/index.html
+++ b/templet/phone_fen/index.html
@@ -36,7 +36,7 @@
                     <h1>关于我们</h1>
                     <ul class="wx-div clearFloat">
                         <li class="wx-small">
-                            <a href="{spUrl c=$jieshao.ptpl tid=$jieshao.id}" data-ajax="false">
+                            <a href="{spUrl c=$jieshao.ptpl tid=$term.id}" data-ajax="false">
                             <img src="{$skin_path}images/Introduction.png" alt="分园简介">
                             <p class="wx-smallt">分园简介</p>
                         </a>
@@ -48,13 +48,13 @@
                         </a>
                         </li>
                         <li class="wx-small">
-                            <a href="{spUrl c=$sheshi.ptpl tid=$sheshi.id}" data-ajax="false">
+                            <a href="{spUrl c=$sheshi.ptpl tid=$term1.id}" data-ajax="false">
                             <img src="{$skin_path}images/Science.png" alt="设施环境">
                             <p class="wx-smallt">设施环境</p>
                         </a>
                         </li>
                         <li class="wx-small">
-                            <a href="{spUrl c=$yuanzhang.ptpl tid=$yuanzhang.id}" data-ajax="false">
+                            <a href="{spUrl c=$yuanzhang.ptpl tid=$term2.id}" data-ajax="false">
                             <img src="{$skin_path}images/director.png" alt="园长介绍">
                             <p class="wx-smallt">园长介绍</p>
                         </a>
@@ -86,7 +86,7 @@
                         <p>{$baoming.brief|msubstr:'0':'100'}</p>
                         <p>本园常年对外招生。</p>
                     </div>
-                    <a class="phone-mm" href="tel:123456789">报名电话</a>
+                    <a class="phone-mm" href="tel:0312-3122001">报名电话</a>
                 </div>
             </div>
     		<div class="center index-c" style="background:#57e1bf;" id="case">
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <h1 class="banquan">©保定剑桥英语 &nbsp; 技术支持：万虎网络&nbsp;</h1>
+    <h1 class="banquan">©保定剑桥英语 &nbsp; 技术支持：<a href="www.wanhunet.com">万虎网络</a>&nbsp;</h1>
 </body>
 <script type="text/javascript">
     $(document).ready(function($) {
