--- a/tplm/parent_list.html
+++ b/tplm/parent_list.html
@@ -20,6 +20,7 @@
                     <img width="28px;" height="25px;" src="{$syskin}/images/logo.png" alt="返回" />
                 </a>
                 <h1 class="pagehead-title">私信家长</h1>
+                <a class="arrowRight" href="{spUrl c=phone a=letter_post}" data-role="button">返回</a>
             </div>
         </div>
         <div id="main" class="page-main">
