--- a/templet/fenyuan/yybm_wybm.html
+++ b/templet/fenyuan/yybm_wybm.html
@@ -20,6 +20,7 @@
                 <form action="{spUrl c=publicc a=bmorder}" method="post">
                 <table>
                   <tr>
+                    <input type="hidden" name="type" value="0"/>
                     <td class="tex left">宝  宝  姓  名 ：</td>
                     <td class="text left"><input name="bbname" value="" type="text" /></td>
 
@@ -54,7 +55,7 @@
                     <tr>
                         <td class="tex xzxx left">选 择 学 校</td>
                         <td class="text left">
-                            <input type="text" id="input_schools" />
+                            <input type="text" id="input_schools" name="xuexiao" />
                         </td>
                     </tr>
                   <tr class="wtly">
