--- a/templet/fenyuan/yybm_wyyy.html
+++ b/templet/fenyuan/yybm_wyyy.html
@@ -19,7 +19,7 @@
                 </p>
                 <form action="{spUrl c=publicc a=bmorder}" method="post">
                     <table>
-                        <tr>
+                        <tr><input type="hidden" name="type" value="1"/>
                             <td class="tex left">宝 宝 姓 名 ：</td>
                             <td class="text left">
                                 <input name="bbname" value="" type="text" />
@@ -52,7 +52,7 @@
                         <tr>
                             <td class="tex xzxx left">选 择 学 校</td>
                             <td class="text left">
-                                   <input type="text" id="input_schools" />
+                                   <input type="text" id="input_schools" name="xuexiao" />
                             </td>
                         </tr>
                         <tr class="wtly">
