--- a/templet/phone_fen/index.html
+++ b/templet/phone_fen/index.html
@@ -105,7 +105,7 @@
             </div>
         </div>
     </div>
-    <h1 class="banquan">©保定剑桥英语 &nbsp; 技术支持：<a href="www.wanhunet.com">万虎网络</a>&nbsp;</h1>
+    <h1 class="banquan">©保定剑桥英语 &nbsp; 技术支持：<a href="http://www.wanhunet.com" style="color:#fff">万虎网络</a>&nbsp;</h1>
 </body>
 <script type="text/javascript">
     $(document).ready(function($) {
