--- a/templet/phone_fen/profile.html
+++ b/templet/phone_fen/profile.html
@@ -41,7 +41,7 @@
             {/if}
        </div>
         <div id="footer" class="footer-page">
-            <p class="footer-p">&copy;保定剑桥英语 技术支持：万虎网络</p>
+            <p class="footer-p">&copy;保定剑桥英语 技术支持：<a href="http://www.wanhunet.com" style="color:#fff">万虎网络</a></p>
         </div>
     </div>
 </body>
