--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -76,6 +76,9 @@
 					<div {$curr_bm_div}>
 						<a href="{spUrl c=admin a=bmorder}" {$curr_bm_list}>报名列表</a>
 					</div>
+					<div {$curr_bm_div}>
+						<a href="{spUrl c=admin a=yuyue}" {$curr_yy_list}>预约列表</a>
+					</div>
 
 					<li>
 						<a href="{spUrl c=admin a=guestbook}" {$curr_guestbook}><span class="f_system">留言查看</span></a>
@@ -92,11 +95,11 @@
 					</div>
 					{/if}
 					<li>
-						<a href="{spUrl c=admin a=adUnit}" {$curr_adUnit}><span class="f_ad">图片友链管理</span></a>
+						<a href="{spUrl c=admin a=adUnit}" {$curr_adUnit}><span class="f_ad">友链管理</span></a>
 					</li>
 					<div {$curr_addisplay}>
-						<a href="{spUrl c=admin a=adUnit}" {$curr_aadUnit}>图片位管理</a>
-						<a href="{spUrl c=admin a=adContent}" {$curr_aadlist}>图片管理</a>
+						<a href="{spUrl c=admin a=adUnit}" {$curr_aadUnit}>位置管理</a>
+						<a href="{spUrl c=admin a=adContent}" {$curr_aadlist}>信息管理</a>
 					</div>
 					{if isAdminRole()}
 					<li>
